--- a/index.html
+++ b/index.html
@@ -4,42 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookMyShow</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
       <div id="head">
-        <!-- 1. Logo and Option Buttons -->
+        <!-- 1. Logo, Search Bar, Location, Sign in and Options Button -->
         <div id="logo">
           <div id="left">
-            <h1>BookMyShow</h1>
+            <img src="./Assets/Images/logo.png" alt="" />
+            <!-- 2. Search Section -->
+            <div id="search">
+              <i class="fas fa-search search-icon"></i>
+              <input
+                type="text"
+                placeholder="search for movies, events or sports"
+              />
+            </div>
           </div>
           <div id="right">
-            <button>Movies</button>
-            <button>Events</button>
-            <button>Sports</button>
-            <button>More</button>
+            <input
+              type="text"
+              placeholder="Select your location"
+              id="location"
+            />
+            <button id="sign">Sign in</button>
           </div>
-        </div>
-        <!-- 2. Search Section -->
-        <div id="search">
-          <input
-            type="text"
-            placeholder="search for movies, events or sports"
-          />
-          <button>Search</button>
         </div>
       </div>
     </header>
     <!-- Website Content -->
     <main>
+      <!-- Navigation Section -->
+
+      <nav id="navigation">
+        <div id="first">
+          <button>Movies</button>
+          <button>Stream</button>
+          <button>Events</button>
+          <button>Plays</button>
+          <button>Sports</button>
+          <button>Activities</button>
+        </div>
+        <div>
+          <button>ListYourShow</button>
+          <button>Corporates</button>
+          <button>Offers</button>
+          <button id="gift_button">Gift Cards</button>
+        </div>
+      </nav>
+
       <!-- Banner Section -->
       <div id="banner">
-        <h2>Experience the Best Movies and Events</h2>
-        <button>Book Now</button>
+        <img src="./Assets/Images/coldplay.avif" alt="" />
+        <img src="./Assets/Images/creditcard.avif" alt="" />
       </div>
-      <div id="content_title"><h2>Popular Movies</h2></div>
+      <div id="content_title"><h2>Recommended Movies</h2></div>
       <div class="movie">
+        <!-- Card 0 -->
+        <div class="card">
+          <img
+            src="./Assets/Images/img0.avif"
+            alt="singham poster"
+            class="img"
+          />
+          <h3>Gladiator II</h3>
+        </div>
+        <!-- Card 01 -->
+        <div class="card">
+          <img
+            src="./Assets/Images/img01.avif"
+            alt="singham poster"
+            class="img"
+          />
+          <h3>Kanguva</h3>
+        </div>
         <!-- Card 1 -->
         <div class="card">
           <img
@@ -119,6 +162,106 @@
           alt="BookMyShow"
           id="footer_image"
         />
+      </div>
+      <div id="content_title"><h2>The Best Of Live Events</h2></div>
+      <div class="movie">
+        <!-- Events -->
+        <!-- Event 1 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt1.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 2 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt2.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 1 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt3.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 4 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt4.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 5 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt5.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 6 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt6.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 7 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt7.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 8 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt8.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 9 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt9.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 10 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt10.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 11 -->
+        <div class="card1">
+          <img
+            src="./Assets/Images/evt11.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
+        <!-- Event 12 -->
+        <div class="card1 last">
+          <img
+            src="./Assets/Images/evt12.avif"
+            alt="singham poster"
+            class="img"
+          />
+        </div>
       </div>
     </main>
   </body>
