premier section added

--- a/index.html
+++ b/index.html
@@ -156,12 +156,8 @@
           <h3>Wild Robote</h3>
         </div>
       </div>
-      <div id="bottom">
-        <img
-          src="./Assets/Images/bottom.avif"
-          alt="BookMyShow"
-          id="footer_image"
-        />
+      <div class="bottom">
+        <img src="./Assets/Images/bottom.avif" alt="BookMyShow" />
       </div>
       <div id="content_title"><h2>The Best Of Live Events</h2></div>
       <div class="movie">
@@ -261,6 +257,109 @@
             alt="singham poster"
             class="img"
           />
+        </div>
+      </div>
+      <div id="pre">
+        <div class="premier">
+          <img src="./Assets/Images/premier.png" alt="" />
+          <div>
+            <h1>PREMIER</h1>
+            <h5>Watch the movies at home, every Friday</h5>
+          </div>
+        </div>
+        <div id="content_title"><h2>Premieres</h2></div>
+        <div class="description">Brand new releases every Friday</div>
+        <div class="movie">
+          <!-- Card 0 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p1.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>Tresure</h3>
+            <h4>English</h4>
+          </div>
+          <!-- Card 01 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p2.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>In The Name of God</h3>
+            <h4>Swedish</h4>
+          </div>
+          <!-- Card 1 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p3.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>Transformers One</h3>
+            <h4>English</h4>
+          </div>
+          <!-- Card 2 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p4.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>Azrael</h3>
+            <h4>Silent</h4>
+          </div>
+          <!-- Card 3 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p5.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>Bato</h3>
+            <h4>Nepali</h4>
+          </div>
+          <!-- Card 4 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p6.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>The Exorism</h3>
+            <h4>English</h4>
+          </div>
+          <!-- Card 5 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p7.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>Laandhar</h3>
+            <h4>Tamil</h4>
+          </div>
+          <!-- Card 6 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p8.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>Knox Goes Away</h3>
+            <h4>English</h4>
+          </div>
+          <!-- Card 7 -->
+          <div class="card">
+            <img
+              src="./Assets/Images/p9.avif"
+              alt="singham poster"
+              class="img"
+            />
+            <h3>The Promised Land</h3>
+            <h4>Denish</h4>
+          </div>
         </div>
       </div>
     </main>
