responsiveness added using media query

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <button>Sports</button>
           <button>Activities</button>
         </div>
-        <div>
+        <div id="second">
           <button>ListYourShow</button>
           <button>Corporates</button>
           <button>Offers</button>
